[package]
name = "veil"
version = "0.1.0"
edition = "2021"
description = "A secure file encryption tool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/veil"

[dependencies]
# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Storage and serialization
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Additional dependencies
byteorder = "1.4"
tempfile = "3.2"  # for tests
rpassword = "7.3"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5" 
